[tool.poetry]
name = "bd-toolkit"
version = "0.1.0"
description = ""
authors = ["Yaksis <59007159+Yakkhini@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "bd_toolkit"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
openpyxl = "^3.1.2"
openai = "^0.27.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
